summative.moria.Moria.scala.error
Erreur de compilation :
Moria:4: error: ')' expected but ';' found.
    (gauche();gauche();avance())}
             ^Moria:4: error: ';' expected but ')' found.
    (gauche();gauche();avance())}
                               ^